Correct error check for using DECIDE API so that it properly picks up if there's an error

--- a/1_prepare_for_mydecide_generation.Rmd
+++ b/1_prepare_for_mydecide_generation.Rmd
@@ -509,6 +509,10 @@ Run test script with
 
 `sbatch generate_mydecide_test.sbatch`
 
+Check the job progress with 
+
+`squeue -u simrol`
+
 Then if all working correctly then run the main script:
 
 `sbatch generate_mydecide.sbatch`
