--- a/newsletter_templates/v0_0_7.Rmd
+++ b/newsletter_templates/v0_0_7.Rmd
@@ -619,13 +619,14 @@ if(params$data_story == 2){
                 min = "1",
                 max = "5"
               ))
+  
   #read the JSON
-  if(names(fromJSON(rawToChar(res$content)))!="error"){
+  if(grepl("error",fromJSON(rawToChar(res$content)))){
+    stop("DECIDE API failed to get suggestions (possibly due to being outside GB)")
+  } else {
     suggestions <- fromJSON(fromJSON(rawToChar(res$content)))
     #get the geojson
     suggestions <- suggestions$geojson %>% geojson_sf()
-  } else {
-    stop("DECIDE API failed to get suggestions (possibly due to being outside GB)")
   }
   
   
