Retry nominatum api if no response

--- a/newsletter_templates/v0_0_7.Rmd
+++ b/newsletter_templates/v0_0_7.Rmd
@@ -298,6 +298,24 @@ invisible_circle <- function(lon,lat,size = 1){
 place_name_fun <- function(lat,lon){
   place_info <-  reverse_geo_lite(lat = lat,lon = lon,full_results = T)
   
+  #try a few times
+  if(is.null(place_info)){
+    Sys.sleep(runif(1,0,100))
+    place_info <-  reverse_geo_lite(lat = lat,lon = lon,full_results = T)
+  }
+  if(is.null(place_info)){
+    Sys.sleep(runif(1,0,100))
+    place_info <-  reverse_geo_lite(lat = lat,lon = lon,full_results = T)
+  }
+  if(is.na(place_info)){
+    Sys.sleep(runif(1,0,100))
+    place_info <-  reverse_geo_lite(lat = lat,lon = lon,full_results = T)
+  }
+  if(is.na(place_info)){
+    Sys.sleep(runif(1,0,100))
+    place_info <-  reverse_geo_lite(lat = lat,lon = lon,full_results = T)
+  }
+  
   place_types <- names(place_info)
   
   if("locality" %in% place_types){
