Placeholder warnings to highlight what's occuring

--- a/newsletter_templates/v0_0_7.Rmd
+++ b/newsletter_templates/v0_0_7.Rmd
@@ -342,6 +342,9 @@ place_name_fun <- function(lat,lon){
   
   place_name <- gsub("CP","",place_name)
   
+  warning(c(lon,lat))
+  warning(c(home_lon,params$home_lat))
+  
 
   #absolute fall back
   if(place_name == "in " ){
