COmmits for 1st september dispatch

--- a/1_prepare_for_mydecide_generation.Rmd
+++ b/1_prepare_for_mydecide_generation.Rmd
@@ -84,6 +84,8 @@ user_db$newsletter_file_location <- ""
 #only subscribed users
 user_db <- filter(user_db,subscribed)
 
+nrow(user_db)
+
 #View the data frame
 #View(user_db)
 ```
