Add a random sleep before rendering the logo

--- a/newsletter_templates/v0_0_7.Rmd
+++ b/newsletter_templates/v0_0_7.Rmd
@@ -365,9 +365,10 @@ place_name_fun <- function(lat,lon){
 ### ACTUAL NEWSLETTER CONTENT STARTS BELOW
 ```
 
+```{r}
+Sys.sleep(runif(1,10,30))
 
-
-
+```
 
 
 
