add image through knitr::include_graphics

--- a/newsletter_templates/v0_0_7.Rmd
+++ b/newsletter_templates/v0_0_7.Rmd
@@ -366,7 +366,12 @@ place_name_fun <- function(lat,lon){
 ```
 
 ```{r}
-Sys.sleep(runif(1,10,30))
+# library(imager)
+# image <- load.image("../images/mydecide_logo.png")
+# plot(image)
+
+
+knitr::include_graphics("../images/mydecide_logo.png")
 
 ```
 
