remove alt image renders

--- a/newsletter_templates/v0_0_7.Rmd
+++ b/newsletter_templates/v0_0_7.Rmd
@@ -366,12 +366,12 @@ place_name_fun <- function(lat,lon){
 ```
 
 ```{r}
-library(imager)
-image <- load.image("../images/mydecide_logo.png")
-plot(image)
-
-
-knitr::include_graphics("../images/mydecide_logo.jpg")
+# library(imager)
+# image <- load.image("../images/mydecide_logo.png")
+# plot(image)
+# 
+# 
+# knitr::include_graphics("../images/mydecide_logo.jpg")
 
 ```
 
