Api request wait tweak

--- a/newsletter_templates/v0_0_7.Rmd
+++ b/newsletter_templates/v0_0_7.Rmd
@@ -300,13 +300,18 @@ place_name_fun <- function(lat,lon){
   
   #try a few times
   if(is.null(place_info)){
-    Sys.sleep(runif(1,0,100))
+    Sys.sleep(runif(1,60,100))
     place_info <-  reverse_geo_lite(lat = lat,lon = lon,full_results = T)
   }
   if(is.null(place_info)){
-    Sys.sleep(runif(1,0,100))
+    Sys.sleep(runif(1,60,100))
     place_info <-  reverse_geo_lite(lat = lat,lon = lon,full_results = T)
   }
+  if(is.null(place_info)){
+    Sys.sleep(runif(1,60,100))
+    place_info <-  reverse_geo_lite(lat = lat,lon = lon,full_results = T)
+  }
+  
   
   place_types <- names(place_info)
   
