--- a/newsletter_templates/v0_0_7.Rmd
+++ b/newsletter_templates/v0_0_7.Rmd
@@ -409,6 +409,8 @@ if(params$data_story != 5){
   p(strong("We need your feedback for this research. Please rate this email by clicking on the orange button below.")) %>% print()
 }
 
+p("This MyDECIDE email was scheduled to sent last Friday but was postponed in light of the sad news regarding the passing of Her Majesty Queen Elizabeth II. The next MyDECIDE email will be sent out on Friday 23rd September and will be the last MyDECIDE email of the season.") %>% print()
+
 hr2()
 
 url_for_pixel <- paste0("https://connect-apps.ceh.ac.uk/mydecide_pixel/pixel?log=",url_uuid,"_",url_letter)
